# day2

./: 2.txt  im.txt  kal.txt  mbkj.txt  n.txt
dictionaryOrder/: CMakeLists.txt  README.md
dictionaryOrder/doc/: doc.md
dictionaryOrder/src/: code.cpp  main.cpp
dictionaryOrder/tests/: runtests.cpp  test.cpp
dictionaryOrder/tests/catch2header/: catch.hpp
inner_folder/: nisha.txt
